refactor NetMQMessage/MailEnvelope mapping to a mapper class.
Fix namespaces. Notes/Comments. Misc cleanup

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -62,9 +62,9 @@
     <Compile Include="Apps\AppDomainAppAdaptor.cs" />
     <Compile Include="Apps\AppsModule.cs" />
     <Compile Include="Backplane\BackplaneModule.cs" />
-    <Compile Include="Backplane\Events\ClusterCommandEvent.cs" />
     <Compile Include="Backplane\Events\ClusterMemberEvent.cs" />
     <Compile Include="Backplane\Events\ZoneMemberEvent.cs" />
+    <Compile Include="Backplane\NetMqMessageMapper.cs" />
     <Compile Include="BrokeredResponse.cs" />
     <Compile Include="Apps\ClientApplication.cs" />
     <Compile Include="ClientMessageBusProxy.cs" />
@@ -120,6 +120,7 @@
     <Compile Include="Master\ClusterNodeManager.cs" />
     <Compile Include="Utility\Extensions\EnumerableExtensions.cs" />
     <Compile Include="Utility\Extensions\EventHandlerExtensions.cs" />
+    <Compile Include="Utility\IMapper.cs" />
     <Compile Include="Utility\PayloadEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
