--- a/Src/CrossStitch.App/CrossStitch.App.csproj
+++ b/Src/CrossStitch.App/CrossStitch.App.csproj
@@ -30,8 +30,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AsyncIO, Version=0.1.25.0, Culture=neutral, PublicKeyToken=44a94435bd6f33f8, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\AsyncIO.0.1.26.0\lib\net40\AsyncIO.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NetMQ, Version=4.0.0.0, Culture=neutral, PublicKeyToken=a6decef4ddc58b3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NetMQ.4.0.0-rc5\lib\net40\NetMQ.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,7 +54,23 @@
   <ItemGroup>
     <Compile Include="ComponentApp.cs" />
     <Compile Include="AppBootloader.cs" />
+    <Compile Include="Events\EventHandlerExtensions.cs" />
+    <Compile Include="Events\PayloadEventArgs.cs" />
+    <Compile Include="IMapper.cs" />
+    <Compile Include="ISerializer.cs" />
+    <Compile Include="Networking\MessageEnvelope.cs" />
+    <Compile Include="Networking\MessageHeader.cs" />
+    <Compile Include="Networking\MessagePayloadType.cs" />
+    <Compile Include="Networking\MessageReceivedEventArgs.cs" />
+    <Compile Include="Networking\NetMqMessageMapper.cs" />
+    <Compile Include="Networking\RawMessage.cs" />
+    <Compile Include="Networking\ReceiveChannel.cs" />
+    <Compile Include="Networking\SendChannel.cs" />
+    <Compile Include="Networking\TargetType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
