--- a/Src/CrossStitch.App/CrossStitch.App.csproj
+++ b/Src/CrossStitch.App/CrossStitch.App.csproj
@@ -52,20 +52,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppContext.cs" />
     <Compile Include="ComponentApp.cs" />
     <Compile Include="AppBootloader.cs" />
     <Compile Include="Events\EventHandlerExtensions.cs" />
     <Compile Include="Events\PayloadEventArgs.cs" />
     <Compile Include="IMapper.cs" />
     <Compile Include="ISerializer.cs" />
+    <Compile Include="Networking\INetwork.cs" />
+    <Compile Include="Networking\IReceiveChannel.cs" />
+    <Compile Include="Networking\ISendChannel.cs" />
     <Compile Include="Networking\MessageEnvelope.cs" />
     <Compile Include="Networking\MessageHeader.cs" />
     <Compile Include="Networking\MessagePayloadType.cs" />
     <Compile Include="Networking\MessageReceivedEventArgs.cs" />
-    <Compile Include="Networking\NetMqMessageMapper.cs" />
+    <Compile Include="Networking\NetMq\NetMqMessageMapper.cs" />
+    <Compile Include="Networking\NetMq\MultiReceiveChannel.cs" />
+    <Compile Include="Networking\NetMq\Network.cs" />
     <Compile Include="Networking\RawMessage.cs" />
-    <Compile Include="Networking\ReceiveChannel.cs" />
-    <Compile Include="Networking\SendChannel.cs" />
+    <Compile Include="Networking\NetMq\SingleReceiveChannel.cs" />
+    <Compile Include="Networking\NetMq\SendChannel.cs" />
     <Compile Include="Networking\TargetType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
