Http server module with NancyFx
Add an Http server module with Nancy, with a test application.
Add a message timer module
Filters for request/responses

--- a/Src/CrossStitch.App/CrossStitch.App.csproj
+++ b/Src/CrossStitch.App/CrossStitch.App.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Networking\NetMq\SendChannel.cs" />
     <Compile Include="Networking\TargetType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Extensions\EnumerableExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
