--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Acquaintance, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Acquaintance.0.0.1-beta\lib\net45\Acquaintance.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="AsyncIO, Version=0.1.25.0, Culture=neutral, PublicKeyToken=44a94435bd6f33f8, processorArchitecture=MSIL">
       <HintPath>..\..\packages\AsyncIO.0.1.26.0\lib\net40\AsyncIO.dll</HintPath>
       <Private>True</Private>
@@ -77,7 +81,6 @@
     <Compile Include="Backplane\BackplaneModule.cs" />
     <Compile Include="Backplane\Events\ClusterMemberEvent.cs" />
     <Compile Include="Backplane\Events\ZoneMemberEvent.cs" />
-    <Compile Include="BrokeredResponse.cs" />
     <Compile Include="Apps\Application.cs" />
     <Compile Include="ClientMessageBusProxy.cs" />
     <Compile Include="Http\HttpConfiguration.cs" />
@@ -90,30 +93,8 @@
     <Compile Include="Master\Events\NodeAddedToClusterEvent.cs" />
     <Compile Include="Master\Events\NodeRemovedFromCluster.cs" />
     <Compile Include="Master\IClusterNodeManager.cs" />
-    <Compile Include="Messaging\MessageBusExtensions.cs" />
     <Compile Include="Timer\MessageTimerModule.cs" />
-    <Compile Include="Messaging\PubSub\AnyThreadPubSubSubscription.cs" />
-    <Compile Include="Messaging\RequestResponse\AnyThreadReqResSubscription.cs" />
-    <Compile Include="Messaging\RequestResponse\DispatchableRequest.cs" />
-    <Compile Include="Messaging\IChannel.cs" />
-    <Compile Include="Messaging\IMessageBus.cs" />
     <Compile Include="IModule.cs" />
-    <Compile Include="Messaging\PubSub\ImmediatePubSubSubscription.cs" />
-    <Compile Include="Messaging\PubSub\IPubSubChannel.cs" />
-    <Compile Include="Messaging\PubSub\IPubSubSubscription.cs" />
-    <Compile Include="Messaging\RequestResponse\ImmediateReqResSubscription.cs" />
-    <Compile Include="Messaging\RequestResponse\IReqResChannel.cs" />
-    <Compile Include="Messaging\RequestResponse\IReqResSubscription.cs" />
-    <Compile Include="Messaging\Threading\IThreadAction.cs" />
-    <Compile Include="Messaging\LocalMessageBus.cs" />
-    <Compile Include="Messaging\Threading\MessageHandlerThread.cs" />
-    <Compile Include="Messaging\Threading\MessageHandlerThreadContext.cs" />
-    <Compile Include="Messaging\Threading\MessagingWorkerThreadPool.cs" />
-    <Compile Include="Messaging\PubSub\PublishEventThreadAction.cs" />
-    <Compile Include="Messaging\PublishOptions.cs" />
-    <Compile Include="Messaging\Threading\DispatchThreadType.cs" />
-    <Compile Include="Messaging\PubSub\SpecificThreadPubSubSubscription.cs" />
-    <Compile Include="Messaging\RequestResponse\SpecificThreadReqResSubscription.cs" />
     <Compile Include="Monitoring\Events\ObservationEvent.cs" />
     <Compile Include="Node\Messages\NodeStatus.cs" />
     <Compile Include="Node\Messages\NodeStatusRequest.cs" />
@@ -122,15 +103,10 @@
     <Compile Include="Master\MasterConfiguration.cs" />
     <Compile Include="Master\MasterModule.cs" />
     <Compile Include="Backplane\NodeCommunicationInformation.cs" />
-    <Compile Include="Messaging\PubSub\PubSubChannel.cs" />
-    <Compile Include="Messaging\RequestResponse\ReqResChannel.cs" />
-    <Compile Include="Messaging\SubscriptionCollection.cs" />
-    <Compile Include="Messaging\SubscriptionToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Backplane\ZyreBackplane.cs" />
     <Compile Include="Master\ClusterNodeManager.cs" />
     <Compile Include="Timer\MessageTimerEvent.cs" />
-    <Compile Include="Timer\TimerMessageBusExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
