--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -63,7 +63,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Apps\AppDataStorage.cs" />
     <Compile Include="Apps\AppDomainAppAdaptor.cs" />
     <Compile Include="Apps\AppFileSystem.cs" />
     <Compile Include="Apps\AppResourceUsage.cs" />
@@ -83,8 +82,15 @@
     <Compile Include="Backplane\Events\ZoneMemberEvent.cs" />
     <Compile Include="Apps\Application.cs" />
     <Compile Include="ClientMessageBusProxy.cs" />
+    <Compile Include="Data\DataConfiguration.cs" />
     <Compile Include="Data\DataModule.cs" />
+    <Compile Include="Data\Entities\Application.cs" />
+    <Compile Include="Data\Entities\Instance.cs" />
+    <Compile Include="Data\Entities\PeerNode.cs" />
+    <Compile Include="Data\FolderDataStorage.cs" />
+    <Compile Include="Data\IDataEntity.cs" />
     <Compile Include="Data\IDataStorage.cs" />
+    <Compile Include="Data\Messages\DataRequest.cs" />
     <Compile Include="Http\HttpConfiguration.cs" />
     <Compile Include="Logging\Events\LogEvent.cs" />
     <Compile Include="Master\ClusterPeerNode.cs" />
