--- a/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
+++ b/Src/CrossStitch.Http.Nancy/CrossStitch.Http.NancyFx.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Handlers\ApplicationModule.cs" />
     <Compile Include="Handlers\NodeRequestHandler.cs" />
     <Compile Include="NancyHttpModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
