--- a/Tests/HttpTest/HttpTest.csproj
+++ b/Tests/HttpTest/HttpTest.csproj
@@ -51,6 +51,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Configs\apps.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Configs\data.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
