--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CrossStitch.Core</RootNamespace>
     <AssemblyName>CrossStitch.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -31,8 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Acquaintance, Version=0.5.6157.35963, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Acquaintance.0.6.0-beta\lib\net461\Acquaintance.dll</HintPath>
+    <Reference Include="Acquaintance, Version=0.6.6229.2034, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Acquaintance.1.0.0-rc1\lib\net46\Acquaintance.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="AsyncIO, Version=0.1.25.0, Culture=neutral, PublicKeyToken=44a94435bd6f33f8, processorArchitecture=MSIL">
@@ -95,6 +95,7 @@
     <Compile Include="Data\IDataEntity.cs" />
     <Compile Include="Data\IDataStorage.cs" />
     <Compile Include="Data\Messages\DataRequest.cs" />
+    <Compile Include="Extensions\MessageBusExtensions.cs" />
     <Compile Include="Http\HttpConfiguration.cs" />
     <Compile Include="Logging\Events\LogEvent.cs" />
     <Compile Include="Master\ClusterPeerNode.cs" />
