--- a/Src/CrossStitch.Core/packages.config
+++ b/Src/CrossStitch.Core/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Acquaintance" version="0.6.0-beta" targetFramework="net461" />
+  <package id="Acquaintance" version="1.0.0-rc1" targetFramework="net461" />
   <package id="AsyncIO" version="0.1.26.0" targetFramework="net45" />
   <package id="NetMQ" version="4.0.0-rc5" targetFramework="net45" />
   <package id="NetMQ.Zyre" version="1.0.0-rc1" targetFramework="net45" />
