--- a/Tests/AppDomainStart.Client/AppDomainStart.Client.csproj
+++ b/Tests/AppDomainStart.Client/AppDomainStart.Client.csproj
@@ -43,18 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MyComponent.cs" />
+    <Compile Include="TestStitch.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Src\CrossStitch.App\CrossStitch.App.csproj">
-      <Project>{b03dd321-d3df-47bf-b003-a076ae755196}</Project>
-      <Name>CrossStitch.App</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
