Fix namespaces and prototype some of the core-stitch communications DTOs and logic classes

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -64,25 +64,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modules\Apps\Adaptors\AppDomainAppAdaptor.cs" />
-    <Compile Include="Modules\Apps\AppFileSystem.cs" />
-    <Compile Include="Modules\Apps\AppResourceUsage.cs" />
-    <Compile Include="Modules\Apps\AppsConfiguration.cs" />
-    <Compile Include="Modules\Apps\AppsDataStorage.cs" />
-    <Compile Include="Modules\Apps\AppsModule.cs" />
-    <Compile Include="Modules\Apps\AppStartedEventArgs.cs" />
-    <Compile Include="Modules\Apps\Versions\DateTimeVersionManager.cs" />
-    <Compile Include="Modules\Apps\Versions\IVersionManager.cs" />
-    <Compile Include="Modules\Apps\Messages\AppInstanceEvent.cs" />
-    <Compile Include="Modules\Apps\Adaptors\IAppAdaptor.cs" />
-    <Compile Include="Modules\Apps\InstanceActionResult.cs" />
-    <Compile Include="Modules\Apps\InstanceAdaptorFactory.cs" />
-    <Compile Include="Modules\Apps\InstanceManager.cs" />
-    <Compile Include="Modules\Apps\Messages\InstanceCreateRequest.cs" />
-    <Compile Include="Modules\Apps\Messages\InstanceInformation.cs" />
-    <Compile Include="Modules\Apps\Messages\InstanceInformationRequest.cs" />
-    <Compile Include="Modules\Apps\Messages\PackageFileUploadRequest.cs" />
-    <Compile Include="Modules\Apps\Adaptors\ProcessAppAdaptor.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\AppDomainAppAdaptor.cs" />
+    <Compile Include="Modules\Stitches\StitchFileSystem.cs" />
+    <Compile Include="Modules\Stitches\StitchResourceUsage.cs" />
+    <Compile Include="Modules\Stitches\StitchesConfiguration.cs" />
+    <Compile Include="Modules\Stitches\StitchesdataStorage.cs" />
+    <Compile Include="Modules\Stitches\StitchesModule.cs" />
+    <Compile Include="Modules\Stitches\StitchStartedEventArgs.cs" />
+    <Compile Include="Modules\Stitches\Versions\DateTimeVersionManager.cs" />
+    <Compile Include="Modules\Stitches\Versions\IVersionManager.cs" />
+    <Compile Include="Modules\Stitches\Messages\AppInstanceEvent.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\IAppAdaptor.cs" />
+    <Compile Include="Modules\Stitches\InstanceActionResult.cs" />
+    <Compile Include="Modules\Stitches\InstanceAdaptorFactory.cs" />
+    <Compile Include="Modules\Stitches\InstanceManager.cs" />
+    <Compile Include="Modules\Stitches\Messages\InstanceCreateRequest.cs" />
+    <Compile Include="Modules\Stitches\Messages\InstanceInformation.cs" />
+    <Compile Include="Modules\Stitches\Messages\InstanceInformationRequest.cs" />
+    <Compile Include="Modules\Stitches\Messages\PackageFileUploadRequest.cs" />
+    <Compile Include="Modules\Stitches\Adaptors\ProcessAppAdaptor.cs" />
     <Compile Include="Modules\Backplane\BackplaneModule.cs" />
     <Compile Include="Modules\Backplane\Events\ClusterMemberEvent.cs" />
     <Compile Include="Modules\Backplane\Events\ZoneMemberEvent.cs" />
