--- a/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -44,17 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="v1\StitchConsoleManager.cs" />
+    <Compile Include="v1\Core\CoreMessageManager.cs" />
+    <Compile Include="v1\Core\FromStitchMessageReader.cs" />
+    <Compile Include="v1\Stitch\StitchMessageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="v1\FromStitchMessage.cs" />
-    <Compile Include="v1\IMessageProcessor.cs" />
-    <Compile Include="v1\StitchMessageReader.cs" />
-    <Compile Include="v1\StitchMessageSender.cs" />
+    <Compile Include="v1\IToStitchMessageProcessor.cs" />
+    <Compile Include="v1\Stitch\ToStitchMessageReader.cs" />
+    <Compile Include="v1\Stitch\FromStitchMessageSender.cs" />
     <Compile Include="v1\ToStitchMessage.cs" />
+    <Compile Include="v1\Core\ToStitchMessageSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
