--- a/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
+++ b/Src/CrossStitch.Stitch/CrossStitch.Stitch.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -44,21 +44,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="v1\Core\CoreMessageManager.cs" />
-    <Compile Include="v1\Core\FromStitchMessageReader.cs" />
-    <Compile Include="v1\Stitch\StitchMessageManager.cs" />
+    <Compile Include="V1\Core\CoreMessageManager.cs" />
+    <Compile Include="V1\Core\FromStitchMessageReader.cs" />
+    <Compile Include="V1\Stitch\StitchMessageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="v1\FromStitchMessage.cs" />
-    <Compile Include="v1\IToStitchMessageProcessor.cs" />
-    <Compile Include="v1\Stitch\ToStitchMessageReader.cs" />
-    <Compile Include="v1\Stitch\FromStitchMessageSender.cs" />
-    <Compile Include="v1\ToStitchMessage.cs" />
-    <Compile Include="v1\Core\ToStitchMessageSender.cs" />
+    <Compile Include="V1\FromStitchMessage.cs" />
+    <Compile Include="V1\IToStitchMessageProcessor.cs" />
+    <Compile Include="V1\Stitch\ToStitchMessageReader.cs" />
+    <Compile Include="V1\Stitch\FromStitchMessageSender.cs" />
+    <Compile Include="V1\ToStitchMessage.cs" />
+    <Compile Include="V1\Core\ToStitchMessageSender.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
