Rearrange some files

--- a/Src/CrossStitch.Core/CrossStitch.Core.csproj
+++ b/Src/CrossStitch.Core/CrossStitch.Core.csproj
@@ -97,7 +97,7 @@
     <Compile Include="Data\Messages\DataRequest.cs" />
     <Compile Include="Events\EventHandlerExtensions.cs" />
     <Compile Include="Events\PayloadEventArgs.cs" />
-    <Compile Include="Extensions\MessageBusExtensions.cs" />
+    <Compile Include="MessageBus\MessageBusExtensions.cs" />
     <Compile Include="Modules\Http\HttpConfiguration.cs" />
     <Compile Include="Logging\Events\LogEvent.cs" />
     <Compile Include="Modules\Master\ClusterPeerNode.cs" />
@@ -108,20 +108,20 @@
     <Compile Include="Modules\Master\Events\NodeAddedToClusterEvent.cs" />
     <Compile Include="Modules\Master\Events\NodeRemovedFromCluster.cs" />
     <Compile Include="Modules\Master\IClusterNodeManager.cs" />
-    <Compile Include="Messages\GenericResponse.cs" />
-    <Compile Include="Utility\Networking\INetwork.cs" />
-    <Compile Include="Utility\Networking\IReceiveChannel.cs" />
-    <Compile Include="Utility\Networking\ISendChannel.cs" />
-    <Compile Include="Utility\Networking\MessageEnvelope.cs" />
-    <Compile Include="Utility\Networking\MessageHeader.cs" />
-    <Compile Include="Utility\Networking\MessagePayloadType.cs" />
-    <Compile Include="Utility\Networking\MessageReceivedEventArgs.cs" />
-    <Compile Include="Utility\Networking\NetMq\MultiReceiveChannel.cs" />
-    <Compile Include="Utility\Networking\NetMq\NetMqMessageMapper.cs" />
-    <Compile Include="Utility\Networking\NetMq\Network.cs" />
-    <Compile Include="Utility\Networking\NetMq\SendChannel.cs" />
-    <Compile Include="Utility\Networking\NetMq\SingleReceiveChannel.cs" />
-    <Compile Include="Utility\Networking\TargetType.cs" />
+    <Compile Include="MessageBus\GenericResponse.cs" />
+    <Compile Include="Networking\INetwork.cs" />
+    <Compile Include="Networking\IReceiveChannel.cs" />
+    <Compile Include="Networking\ISendChannel.cs" />
+    <Compile Include="Networking\MessageEnvelope.cs" />
+    <Compile Include="Networking\MessageHeader.cs" />
+    <Compile Include="Networking\MessagePayloadType.cs" />
+    <Compile Include="Networking\MessageReceivedEventArgs.cs" />
+    <Compile Include="Networking\NetMq\MultiReceiveChannel.cs" />
+    <Compile Include="Networking\NetMq\NetMqMessageMapper.cs" />
+    <Compile Include="Networking\NetMq\Network.cs" />
+    <Compile Include="Networking\NetMq\SendChannel.cs" />
+    <Compile Include="Networking\NetMq\SingleReceiveChannel.cs" />
+    <Compile Include="Networking\TargetType.cs" />
     <Compile Include="Node\ApplicationCoordinator.cs" />
     <Compile Include="Node\DataHelperClient.cs" />
     <Compile Include="Node\Messages\ApplicationMessage.cs" />
